Changes for 1.5.1
* Changed Sea Placements to use all production for all surrounding Factories, if multiple factories touch that sea zone. Will now dynamically shift the production of other sea units away to other legal factories in order to allow the maximum production possible. (frigoref & veqryn)

* Fixed null pointer error in trying to place a construction to a sea zone. (veqryn)

* Locking the map when user's mouse is over the history panel, and then unlocking for each click on a history node. (frigoref)

* Fixed bug where Rounds would not appear in a Client game. (veqryn)

* Creating a NullModeratorController class for locally hosted games. (veqryn)

* Fixed bug where steps appear out of order in a client game's history panel. (frigoref)

* Created new Trigger Attachment option, changeOwnership, which will allow a map to have the owner of a territory change by trigger. (veqryn)

* For Trigger Attachment option "removeUnits", now allowing the use of "all" in place of the territory name, and also "all" in place of the unit type. Can be used to remove all units from some or all territories. (veqryn)

* Correcting politics for Alpha xml. (veqryn)

* Changing game property, Selectable Tech Roll, to also work with WW2V3 Tech Model, allowing the user to select which tech they want after a successful roll. Also fixed the dice chooser to let you set the sides. (veqryn)

* Fixing bugs in new air movement validation, and improving speed and efficiency. (veqryn)

* Completely rewrote the validation of air unit movement, and moved it to a new class, AirMovementValidator.java (veqryn)

* More work on rewriting MoveValidation of air units. (veqryn)

* Allowed for the use of the Arrow Keys for navigating around the map. (frigoref)

* Adding [Mod] tags onto the names of any Admins in the online lobby. (veqryn)

* Possibly correcting some hidden bugs in MoveValidator. (veqryn)
